--- a/ScanbotBarcodeSDKExample/BarcodeSDK.NET.Droid/Resources/layout/barcode_camerax_activity.xml
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.NET.Droid/Resources/layout/barcode_camerax_activity.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     tools:context=".DemoBarcodeCameraXViewActivity">
 
-    <io.scanbot.sdk.barcode.ui.BarcodeScannerView
+    <io.scanbot.sdk.ui.camera.ScanbotCameraXView
         android:id="@+id/camerax"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
