--- a/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/App.xaml
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/App.xaml
@@ -2,7 +2,7 @@
 <Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:BarcodeSDK.MAUI.Example"
-             x:Class="BarcodeSDK.MAUI.Example.App">
+             x:Class="ScanbotSDK.MAUI.Example.App">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
