--- a/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/Pages/BarcodeClassicComponentPage.xaml
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/Pages/BarcodeClassicComponentPage.xaml
@@ -2,8 +2,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
-             x:Class="BarcodeSDK.MAUI.Example.Pages.BarcodeClassicComponentPage"
-             xmlns:local="clr-namespace:BarcodeSDK.MAUI.Example.ClassicComponent"
+             x:Class="ScanbotSDK.MAUI.Example.Pages.BarcodeClassicComponentPage"
+             xmlns:local="clr-namespace:ScanbotSDK.MAUI.Example.ClassicComponent"
              ios:Page.UseSafeArea="true"
              Title="BarcodeClassicComponentPage"
              NavigationPage.HasNavigationBar="True">
