--- a/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/Pages/BarcodeResultPage.xaml
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/Pages/BarcodeResultPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="BarcodeSDK.MAUI.Example.Pages.BarcodeResultPage"
+             x:Class="ScanbotSDK.MAUI.Example.Pages.BarcodeResultPage"
              Title="BarcodeResultPage">
     <StackLayout>
         <StackLayout Grid.Row="0">
