--- a/ScanbotBarcodeSDKExample/BarcodeSDK.NET.Droid.Example/Resources/layout/activity_main_legacy.xml
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.NET.Droid.Example/Resources/layout/activity_main_legacy.xml
@@ -138,15 +138,32 @@
 				android:layout_height="1dp"
 				android:background="#50000000" />
 
-			<TextView
-				android:id="@+id/rtu_ui_v2_aroverlay"
+            <TextView
+				android:id="@+id/rtu_ui_v2_single"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:gravity="center_vertical"
 				android:paddingHorizontal="16dp"
 				android:paddingVertical="20dp"
 				style="@style/Scanbot.Demo.MaterialTwoButtonTeaser.Button"
-				android:text="Barcode Scanner ArOverlay"
+				android:text="RTU UI - single scanning"
+				android:textColor="@color/primary_material_light" />
+
+			<FrameLayout
+				android:layout_width="match_parent"
+				android:layout_height="1dp"
+				android:background="#50000000" />
+
+
+			<TextView
+				android:id="@+id/rtu_ui_v2_single_ar_overlay"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:gravity="center_vertical"
+				android:paddingHorizontal="16dp"
+				android:paddingVertical="20dp"
+				style="@style/Scanbot.Demo.MaterialTwoButtonTeaser.Button"
+				android:text="RTU UI - single scanning selection overlay"
 				android:textColor="@color/primary_material_light" />
 
 			<FrameLayout
@@ -155,14 +172,14 @@
 				android:background="#50000000" />
 
 			<TextView
-				android:id="@+id/rtu_ui_v2_item_mapping"
+				android:id="@+id/rtu_ui_v2_batch"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:gravity="center_vertical"
 				android:paddingHorizontal="16dp"
 				android:paddingVertical="20dp"
 				style="@style/Scanbot.Demo.MaterialTwoButtonTeaser.Button"
-				android:text="Barcode Scanner ItemMapping"
+				android:text="RTU UI - batch barcode scanning"
 				android:textColor="@color/primary_material_light" />
 
 			<FrameLayout
@@ -171,14 +188,14 @@
 				android:background="#50000000" />
 
 			<TextView
-				android:id="@+id/rtu_ui_v2_multiple_scanning_preview"
+				android:id="@+id/rtu_ui_v2_multiple_unique"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:gravity="center_vertical"
 				android:paddingHorizontal="16dp"
 				android:paddingVertical="20dp"
 				style="@style/Scanbot.Demo.MaterialTwoButtonTeaser.Button"
-				android:text="Barcode Scanner MultipleScanning Preview"
+				android:text="RTU UI - multiple unique barcode scanning"
 				android:textColor="@color/primary_material_light" />
 
 			<FrameLayout
@@ -187,62 +204,14 @@
 				android:background="#50000000" />
 
 			<TextView
-				android:id="@+id/rtu_ui_v2_multiple_scanning"
+				android:id="@+id/rtu_ui_v2_find_and_pick"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:gravity="center_vertical"
 				android:paddingHorizontal="16dp"
 				android:paddingVertical="20dp"
 				style="@style/Scanbot.Demo.MaterialTwoButtonTeaser.Button"
-				android:text="Barcode Scanner MultipleScanning"
-				android:textColor="@color/primary_material_light" />
-
-			<FrameLayout
-				android:layout_width="match_parent"
-				android:layout_height="1dp"
-				android:background="#50000000" />
-			
-			<TextView
-				android:id="@+id/rtu_ui_v2_single_scanning"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:gravity="center_vertical"
-				android:paddingHorizontal="16dp"
-				android:paddingVertical="20dp"
-				style="@style/Scanbot.Demo.MaterialTwoButtonTeaser.Button"
-				android:text="Barcode Scanner SingleScanning"
-				android:textColor="@color/primary_material_light" />
-
-			<FrameLayout
-				android:layout_width="match_parent"
-				android:layout_height="1dp"
-				android:background="#50000000" />
-
-			<TextView
-				android:id="@+id/rtu_ui_v2_topbar"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:gravity="center_vertical"
-				android:paddingHorizontal="16dp"
-				android:paddingVertical="20dp"
-				style="@style/Scanbot.Demo.MaterialTwoButtonTeaser.Button"
-				android:text="Barcode Scanner TopBar"
-				android:textColor="@color/primary_material_light" />
-
-			<FrameLayout
-				android:layout_width="match_parent"
-				android:layout_height="1dp"
-				android:background="#50000000" />
-
-			<TextView
-				android:id="@+id/rtu_ui_v2_userguid"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:gravity="center_vertical"
-				android:paddingHorizontal="16dp"
-				android:paddingVertical="20dp"
-				style="@style/Scanbot.Demo.MaterialTwoButtonTeaser.Button"
-				android:text="Barcode Scanner UserGuidance"
+				android:text="RTU UI - find and pick barcode scanning"
 				android:textColor="@color/primary_material_light" />
 
 			<TextView
