MAUI - Updated the UI for Classic Components for Height, Width. - Removed the Start/Stop button from the Classic Component BarcodeScannerView

--- a/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/Pages/BarcodeScanAndCountClassicComponentPage.xaml
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/Pages/BarcodeScanAndCountClassicComponentPage.xaml
@@ -23,8 +23,8 @@
                     VerticalOptions="Fill"
                     OnBarcodeScanResult="CameraView_OnOnBarcodeScanResult"
                     OnScanAndCountFinished="CameraView_OnOnScanAndCountFinished"
-                    HeightRequest="420"
-                    WidthRequest="330" />
+                    MinimumHeightRequest="420"
+                    MinimumWidthRequest="330" />
             </StackLayout>
             <Grid Grid.Row="1">
                 <StackLayout
