--- a/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/Pages/BarcodeArOverlayClassicComponentPage.xaml
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/Pages/BarcodeArOverlayClassicComponentPage.xaml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <pages:BaseComponentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
                          xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                          xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
@@ -15,28 +16,40 @@
             <RowDefinition Height="2*" />
         </Grid.RowDefinitions>
         <Label Grid.Row="0"
-               Text="Barcode ClassicComponent"
+               Text="Barcode Classic Component"
                FontSize="Subtitle"
                VerticalTextAlignment="Center"
                HorizontalTextAlignment="Center"
-               VerticalOptions="Center" 
+               VerticalOptions="Center"
                HorizontalOptions="Fill" />
         <StackLayout Grid.Row="1">
             <classicComponent:BarcodeScannerView
                 x:Name="cameraView"
-                HeightRequest="500"
-                WidthRequest="300"
+                MinimumHeightRequest="500"
+                MinimumWidthRequest="300"
                 OnSelectBarcodeResult="CameraView_OnOnSelectBarcodeResult"
                 HorizontalOptions="Fill"
                 VerticalOptions="Fill" />
         </StackLayout>
-        <Grid Grid.Row="2">
-            <Label 
-                x:Name="lblResult"
-                Text="Result"
-                VerticalTextAlignment="Center"
-                VerticalOptions="Center" 
-                HorizontalOptions="Center" />
-        </Grid>
+        <ScrollView Grid.Row="2">
+            <StackLayout>
+                <Label
+                    x:Name="lblResultCaption"
+                    Text="Result"
+                    FontAttributes="Bold"
+                    FontSize="18"
+                    HorizontalTextAlignment="Center"
+                    VerticalTextAlignment="Center"
+                    VerticalOptions="Center"
+                    HorizontalOptions="Center" />
+                <Label
+                    x:Name="lblResult"
+                    Margin="15,10"
+                    HorizontalTextAlignment="Center"
+                    VerticalTextAlignment="Center"
+                    VerticalOptions="Center"
+                    HorizontalOptions="Center" />
+            </StackLayout>
+        </ScrollView>
     </Grid>
 </pages:BaseComponentPage>
