--- a/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/Pages/BarcodeClassicComponentPage.xaml
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/Pages/BarcodeClassicComponentPage.xaml
@@ -1,18 +1,18 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
+
 <pages:BaseComponentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-                   xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                   xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
-                   xmlns:classicComponent="clr-namespace:ScanbotSDK.MAUI.ClassicComponent;assembly=ScanbotSDK.Shared"
-                   xmlns:pages="clr-namespace:ScanbotSDK.MAUI.Example.Pages"
-                   x:Class="ScanbotSDK.MAUI.Example.Pages.BarcodeClassicComponentPage"
-                   ios:Page.UseSafeArea="true"
-                   Title="BarcodeClassicComponentPage"
-                   NavigationPage.HasNavigationBar="True">
+                         xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                         xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
+                         xmlns:classicComponent="clr-namespace:ScanbotSDK.MAUI.ClassicComponent;assembly=ScanbotSDK.Shared"
+                         xmlns:pages="clr-namespace:ScanbotSDK.MAUI.Example.Pages"
+                         x:Class="ScanbotSDK.MAUI.Example.Pages.BarcodeClassicComponentPage"
+                         ios:Page.UseSafeArea="true"
+                         Title="BarcodeClassicComponentPage"
+                         NavigationPage.HasNavigationBar="True">
     <Grid RowSpacing="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="7*" />
-            <RowDefinition Height="50" />
-            <RowDefinition Height="*" />
+            <RowDefinition Height="3*" />
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="0">
@@ -22,24 +22,28 @@
                 MinimumWidthRequest="300"
                 OnBarcodeScanResult="CameraView_OnOnBarcodeScanResult"
                 HorizontalOptions="Fill"
-                VerticalOptions="Fill"
-                IsVisible="False"/>
+                VerticalOptions="Fill" />
         </Grid>
 
-        <Grid Grid.Row="1">
-            <Button
-                    x:Name="CameraBtn"
-                    HorizontalOptions="Center"
-                    Text="Start Scanner"
-                    Clicked="ToggleCameraPreview_Clicked" />
-        </Grid>
-        <ScrollView Grid.Row="2">
-            <Label 
-                x:Name="lblResult"
-                Text="Result"
-                VerticalTextAlignment="Center"
-                VerticalOptions="Center" 
-                HorizontalOptions="Center" />
+        <ScrollView Grid.Row="1">
+            <StackLayout>
+                <Label
+                    x:Name="lblResultCaption"
+                    Text="Result"
+                    FontAttributes="Bold"
+                    FontSize="18"
+                    HorizontalTextAlignment="Center"
+                    VerticalTextAlignment="Center"
+                    VerticalOptions="Center"
+                    HorizontalOptions="Center" />
+                <Label
+                    x:Name="lblResult"
+                    Margin="15,10"
+                    HorizontalTextAlignment="Center"
+                    VerticalTextAlignment="Center"
+                    VerticalOptions="Center"
+                    HorizontalOptions="Center" />
+            </StackLayout>
         </ScrollView>
     </Grid>
 </pages:BaseComponentPage>
