MAUI: - Updated the ScanAndCountView xaml UI. The ScrollView doesn't understand how much height the ClassicComponent will take. - Reasonably, the ClassicComponent also gets issues with its height calculation.

--- a/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/Pages/BarcodeArOverlayClassicComponentPage.xaml
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/Pages/BarcodeArOverlayClassicComponentPage.xaml
@@ -27,8 +27,7 @@
                 x:Name="cameraView"
                 OnSelectBarcodeResult="CameraView_OnOnSelectBarcodeResult"
                 HorizontalOptions="Fill"
-                VerticalOptions="Fill"
-                />
+                VerticalOptions="Fill" />
         </Grid>
         <ScrollView Grid.Row="2">
             <StackLayout>
