--- a/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/Pages/BarcodeScanAndCountClassicComponentPage.xaml
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/Pages/BarcodeScanAndCountClassicComponentPage.xaml
@@ -8,25 +8,22 @@
                    ios:Page.UseSafeArea="true"
                    Title="BarcodeClassicScanAndCountComponentPage"
                    NavigationPage.HasNavigationBar="True">
-    <ScrollView>
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="7.5*" />
-                <RowDefinition Height="2.5*" />
-            </Grid.RowDefinitions>
-            <StackLayout 
-                Grid.Row="0"
-                Margin="0,15,0,0">
-                <classicComponent:BarcodeScanAndCountView
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="7*" />
+            <RowDefinition Height="3*" />
+        </Grid.RowDefinitions>
+        <Grid 
+                Grid.Row="0">
+            <classicComponent:BarcodeScanAndCountView
                     x:Name="cameraView"
                     HorizontalOptions="Fill"
                     VerticalOptions="Fill"
                     OnBarcodeScanResult="CameraView_OnOnBarcodeScanResult"
-                    OnScanAndCountFinished="CameraView_OnOnScanAndCountFinished"
-                    MinimumHeightRequest="420"
-                    MinimumWidthRequest="330" />
-            </StackLayout>
-            <Grid Grid.Row="1">
+                    OnScanAndCountFinished="CameraView_OnOnScanAndCountFinished"/>
+        </Grid>
+        <Grid Grid.Row="1">
+            <ScrollView>
                 <StackLayout
                     VerticalOptions="Center"
                     HorizontalOptions="FillAndExpand"
@@ -50,7 +47,7 @@
                         HorizontalOptions="Center"
                         Clicked="ConitueScanningButton_Clicked"/>
                 </StackLayout>
-            </Grid>
+            </ScrollView>
         </Grid>
-    </ScrollView>
+    </Grid>
 </pages:BaseComponentPage>
