MAUI: - Updated the Classic examples to wrap the component inside the classic container. - Updated the ScanbotBarcodeSDK.MAUI package version

--- a/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/Pages/BarcodeArOverlayClassicComponentPage.xaml
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/Pages/BarcodeArOverlayClassicComponentPage.xaml
@@ -22,14 +22,13 @@
                HorizontalTextAlignment="Center"
                VerticalOptions="Center"
                HorizontalOptions="Fill" />
-        <StackLayout Grid.Row="1">
+        <classicComponent:ScanbotClassicUIContainer Grid.Row="1"
+            HorizontalOptions="Fill"
+            VerticalOptions="Fill">
             <classicComponent:BarcodeScannerView
                 x:Name="cameraView"
-                OnSelectBarcodeResult="CameraView_OnOnSelectBarcodeResult"
-                HorizontalOptions="Fill"
-                VerticalOptions="Fill"
-                IsVisible="True" />
-        </StackLayout>
+                OnSelectBarcodeResult="CameraView_OnOnSelectBarcodeResult" />
+        </classicComponent:ScanbotClassicUIContainer>
         <StackLayout Grid.Row="2">
             <Label
                 x:Name="lblResultCaption"
