--- a/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/Pages/BarcodeClassicComponentPage.xaml
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/Pages/BarcodeClassicComponentPage.xaml
@@ -16,15 +16,14 @@
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="0">
+            <classicComponent:ScanbotClassicUIContainer
+                HorizontalOptions="Fill"
+                VerticalOptions="Fill">
             <classicComponent:BarcodeScannerView
                 x:Name="cameraView"
-                MinimumHeightRequest="500"
-                MinimumWidthRequest="300"
-                OnBarcodeScanResult="CameraView_OnOnBarcodeScanResult"
-                HorizontalOptions="Fill"
-                VerticalOptions="Fill" />
+                OnBarcodeScanResult="CameraView_OnOnBarcodeScanResult" />
+            </classicComponent:ScanbotClassicUIContainer>
         </Grid>
-
         <ScrollView Grid.Row="1">
             <StackLayout>
                 <Label
