--- a/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/Pages/BarcodeScanAndCountClassicComponentPage.xaml
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/Pages/BarcodeScanAndCountClassicComponentPage.xaml
@@ -15,12 +15,15 @@
         </Grid.RowDefinitions>
         <Grid 
             Grid.Row="0">
+            <classicComponent:ScanbotClassicUIContainer 
+                Grid.Row="1"
+                HorizontalOptions="Fill"
+                VerticalOptions="Fill">
             <classicComponent:BarcodeScanAndCountView
                     x:Name="cameraView"
-                    HorizontalOptions="Fill"
-                    VerticalOptions="Fill"
                     OnBarcodeScanResult="CameraView_OnOnBarcodeScanResult"
                     OnScanAndCountFinished="CameraView_OnOnScanAndCountFinished"/>
+            </classicComponent:ScanbotClassicUIContainer>
         </Grid>
         <ScrollView Grid.Row="1">
             <StackLayout>
