--- a/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/Pages/BarcodeScanAndCountClassicComponentPage.xaml
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/Pages/BarcodeScanAndCountClassicComponentPage.xaml
@@ -16,10 +16,8 @@
         <Grid 
             Grid.Row="0">
             <classicComponent:ScanbotClassicUIContainer 
-                Grid.Row="1"
-                HorizontalOptions="Fill"
-                VerticalOptions="Fill">
-            <classicComponent:BarcodeScanAndCountView
+                Grid.Row="1">
+                <classicComponent:BarcodeScanAndCountView
                     x:Name="cameraView"
                     OnBarcodeScanResult="CameraView_OnOnBarcodeScanResult"
                     OnScanAndCountFinished="CameraView_OnOnScanAndCountFinished"/>
