MAUI BS: 5.1.3 Hotfix - Test Classic Component - Added Visibility buttons for testing the classic components visibility feature

--- a/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/Pages/BarcodeClassicComponentPage.xaml
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/Pages/BarcodeClassicComponentPage.xaml
@@ -19,11 +19,17 @@
             <classicComponent:ScanbotClassicUIContainer>
                 <classicComponent:BarcodeScannerView
                     x:Name="cameraView"
-                    OnBarcodeScanResult="CameraView_OnOnBarcodeScanResult" />
+                    OnBarcodeScanResult="CameraView_OnOnBarcodeScanResult"
+                    IsVisible="False"/>
             </classicComponent:ScanbotClassicUIContainer>
         </Grid>
         <ScrollView Grid.Row="1">
             <StackLayout>
+                <Button 
+                    x:Name="VisibilityButton"
+                    Clicked="VisibilityButton_OnClicked" 
+                    Text="Toggle Visibility" 
+                    HorizontalOptions="Center" />
                 <Label
                     x:Name="lblResultCaption"
                     Text="Result"
