--- a/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/Pages/BarcodeScanAndCountClassicComponentPage.xaml
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/Pages/BarcodeScanAndCountClassicComponentPage.xaml
@@ -31,6 +31,11 @@
                     HorizontalOptions="Center"
                     Spacing="10">
                     <Button
+                            x:Name="VisibilityButton"
+                            Clicked="VisibilityButton_OnClicked" 
+                            Text="Toggle Visibility" 
+                            HorizontalOptions="Center"/>
+                    <Button
                         x:Name="StartScanningButton"
                         Text="Capture"
                         VerticalOptions="Center" 
