MAUI BS: 5.1.1 - Removed test code - Classic component

--- a/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/Pages/BarcodeClassicComponentPage.xaml
+++ b/ScanbotBarcodeSDKExample/BarcodeSDK.MAUI.Example/Pages/BarcodeClassicComponentPage.xaml
@@ -19,8 +19,7 @@
             <classicComponent:ScanbotClassicUIContainer>
                 <classicComponent:BarcodeScannerView
                     x:Name="cameraView"
-                    OnBarcodeScanResult="CameraView_OnOnBarcodeScanResult"
-                    IsVisible="False"/>
+                    OnBarcodeScanResult="CameraView_OnOnBarcodeScanResult" />
             </classicComponent:ScanbotClassicUIContainer>
         </Grid>
         <ScrollView Grid.Row="1">
